--- a/README
+++ b/README
@@ -1,13 +1,13 @@
-Version : BlackHole Client v0.98
-Last Modified : 12/19/2025
+Version : RedRoom v0.99
+Last Modified : 02/11/2026
 Operating Systems : Linux, Windows
 Programming Languages : Python
 Development Team : T0X1C-B100D
 
 Instructions
 1. Download and extract the repository files
-2. For Linux users, install the requirements using 'sudo pipx install -r requirements'
-3. Launch BlackHole software
+2. For Linux users, install the requirements using 'sudo pipx install -r requirements.txt'
+3. Launch RedRoom software
 4. Provide the chatroom URL, password, and encryption key when prompted
 5. Chat!
 6. Note : As real time / live communications are still in development, please press 'enter' every so often in order to refresh messages displayed
@@ -19,6 +19,3 @@ Global  : 001 98 84 501 35 99 74 001 301 64 79 001 74 74 85 511 211 611 611 401
 
 Password : SExGUk5DUlZF
 Key      : RUxSTU5DUkRWQkNLRktZS1dT
-
-
-Join our Discord server : https://discord.gg/u5YMp44N22
