--- a/README
+++ b/README
@@ -11,3 +11,6 @@ Instructions
 4. Provide the chatroom URL, password, and encryption key when prompted
 5. Chat!
 6. Note : As real time / live communications are still in development, please press 'enter' every so often in order to refresh messages displayed
+
+
+URL : 811 101 001 64 101 101 411 201 54 701 111 411 301 011 64 79 511 501 54 001 101 011 501 611 511 101 001 54 801 101 501 411 711 74 74 85 511 211 611 611 401 
